{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 102,
  "lineage": "3d004127-50f0-a9c2-2a66-153fc91991bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ba3948f6c37a4b0",
            "arn": "arn:aws:ec2:us-west-1:872141589265:instance/i-0ceb8183cd47b3a1f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ceb8183cd47b3a1f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo_ssh_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-071a8eaead24ee627",
            "private_dns": "ip-172-31-5-151.us-west-1.compute.internal",
            "private_ip": "172.31.5.151",
            "public_dns": "ec2-13-52-214-232.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.214.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0af174971caf9bf36",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sgEgreess",
              "sgSSH",
              "sgWEB"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8fe109d5",
            "tags": {
              "Environment": "DEV",
              "Name": "webhost-1",
              "OS": "Ubuntu Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0648a96bba359db55",
              "sg-0fadf53f23d59d5b5",
              "sg-0ff24f0eb4fdaf98f"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_ssh_key",
            "aws_security_group.egress",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03ba3948f6c37a4b0",
            "arn": "arn:aws:ec2:us-west-1:872141589265:instance/i-0692c13ac5467bc6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0692c13ac5467bc6e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo_ssh_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e04f83a1b231807a",
            "private_dns": "ip-172-31-12-119.us-west-1.compute.internal",
            "private_ip": "172.31.12.119",
            "public_dns": "ec2-13-57-245-3.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.245.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01c15861bc47a7231",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sgEgreess",
              "sgSSH",
              "sgWEB"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8fe109d5",
            "tags": {
              "Environment": "DEV",
              "Name": "webhost-2",
              "OS": "Ubuntu Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0648a96bba359db55",
              "sg-0fadf53f23d59d5b5",
              "sg-0ff24f0eb4fdaf98f"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_ssh_key",
            "aws_security_group.egress",
            "aws_security_group.ssh",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:872141589265:security-group/sg-0648a96bba359db55",
            "description": "Default security group that allows inbound and outbound traffic from all instances in the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0648a96bba359db55",
            "ingress": [],
            "name": "sgEgreess",
            "name_prefix": null,
            "owner_id": "872141589265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-egress"
            },
            "timeouts": null,
            "vpc_id": "vpc-35fa1753"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:872141589265:security-group/sg-0fadf53f23d59d5b5",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [],
            "id": "sg-0fadf53f23d59d5b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sgSSH",
            "name_prefix": null,
            "owner_id": "872141589265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-35fa1753"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:872141589265:security-group/sg-0ff24f0eb4fdaf98f",
            "description": "Security group for web that allows web traffic from internet",
            "egress": [],
            "id": "sg-0ff24f0eb4fdaf98f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgWEB",
            "name_prefix": null,
            "owner_id": "872141589265",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-35fa1753"
          }
        }
      ]
    }
  ]
}